@@ -102,22 +102,24 @@ sub __TOKENIZER__on_char {
 sub __TOKENIZER__commit {
 	my $t = $_[1];
 
-	if ( $t->__current_token_is_forced_word ) {
-		# Forced to be a word. Done.
-		return PPI::Token::Word->__TOKENIZER__commit($t);
-	}
-
 	# Capture the rest of the token
 	pos $t->{line} = $t->{line_cursor};
-	if ( $t->{line} !~ m/\G(v\d+(?:\.\d+)*)/gc ) {
+	if ( $t->{line} !~ m/\G(v\d+(?:\.\d+)+|v\d+\b)/gc ) {
 		# This was not a v-string after all (it's a word)
 		return PPI::Token::Word->__TOKENIZER__commit($t);
 	}
 
+	my $content = $1;
+
+	# If there are no periods this could be a word starting with v\d
+	if ( ($content !~ /\./) and $t->__current_token_is_forced_word ) {
+		# Forced to be a word. Done.
+		return PPI::Token::Word->__TOKENIZER__commit($t);
+	}
+
 	# This is a v-string
-	my $vstring = $1;
-	$t->{line_cursor} += length($vstring);
-	$t->_new_token('Number::Version', $vstring);
+	$t->{line_cursor} += length($content);
+	$t->_new_token('Number::Version', $content);
 	$t->_finalize_token->__TOKENIZER__on_char($t);
 }
 
